<resources>
    <string name="app_name">Zing Mp3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_music">My Music</string>
    <string name="baihat">Bài hát</string>
    <string name="album">Album</string>
    <string name="nghesi">Nghệ sĩ</string>
    <string name="playlist">Playlist</string>
    <string name="thumuc">Thư mục</string>
    <string name="download">Download</string>
    <string name="like">Yêu thích</string>
    <string name="upload">Nhạc Upload</string>
</resources>
